# scene-wiki

./: .dockerignore  .gitignore  Dockerfile.runner  README.md  fly.toml  pyproject.toml  wrangler.toml
examples/demo-run/: metadata.json
examples/demo-run/artifacts/: corpus.json
examples/demo-run/normalized/: 2026-03-01_founder-salon_full.json  2026-03-01_midnight-readings_full.json  2026-03-14_demo-day-brunch_full.json  2026-03-14_rainy-screening_full.json
platform/: worker.mjs
platform/migrations/: 0001_initial.sql
platform/public/: app.js  index.html  styles.css
scripts/: bootstrap_platform.sh  build_wiki_site.sh  deploy_platform.sh  deploy_wiki.sh  platform.env.example  platform_runner.py  scene_wiki.env.example
src/scene_wiki/: chunking.py  cli.py  config.py  html_tools.py  link_extraction.py  models.py  newsletter_corpus.py  newsletter_extraction.py  scene_search.py  scene_wiki.py  site.py  storage.py  substack.py
src/scene_wiki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wiki/: package-lock.json  package.json  quartz.config.ts  quartz.layout.ts  tsconfig.json  tsconfig.tsbuildinfo
wiki/custom/: alphaloop-modules.d.ts  build-scene-search-bundles.mjs  scene-search-app.tsx  scene-search-worker.ts
wiki/quartz/.quartz-cache/: transpiled-build.mjs  transpiled-build.mjs.map  transpiled-worker.mjs  transpiled-worker.mjs.map
wiki/quartz/components/: Graph.tsx  SceneSearchSidebar.tsx  index.ts  renderPage.tsx
wiki/quartz/components/scripts/: explorer.inline.ts  (+1 more)
wiki/quartz/styles/: base.scss  custom.scss
(+3 files in other folders)
